# GraphManipulator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Client/: index.html
Client/static/css/: style.css
Client/static/js/: wsclient.js
include/: AdjacencyObjectsGenerator.h  AdjacencyObjectsGenerator.hpp  GraphMapper.h  GraphMapper.hpp  GraphProcessor.h  GraphProcessor.hpp  NodeEndPoint.hpp  NodeMiddleWare.hpp  NodeObserver.hpp  WSServer.h  wsserver.hpp
lemon/: CMakeLists.txt
lemon/cmake/PaxHeaders.31067/: FindCOIN.cmake  FindGhostscript.cmake  FindSOPLEX.cmake  nsis  version.cmake
lemon/lemon/: core.h
lemon/lemon/PaxHeaders.31067/: CMakeLists.txt  adaptors.h  arg_parser.cc  arg_parser.h  assert.h  base.cc  bellman_ford.h  bfs.h  bin_heap.h  binomial_heap.h  bits  bucket_heap.h  capacity_scaling.h  cbc.cc  cbc.h  christofides_tsp.h  circulation.h  clp.cc  clp.h  color.cc  color.h  concept_check.h  concepts  config.h.in  connectivity.h  core.h  cost_scaling.h  counter.h  cplex.cc  cplex.h  cycle_canceling.h  dfs.h  dheap.h  dijkstra.h  dim2.h  dimacs.h  edge_set.h  edmonds_karp.h  elevator.h  error.h  (+54 more)
lemon/lemon/bits/: default_map.h  lock.h
lemon/lemon/bits/PaxHeaders.31067/: array_map.h  default_map.h  edge_set_extender.h  enable_if.h  graph_adaptor_extender.h  lock.h  map_extender.h  path_dump.h  solver_bits.h  traits.h  variant.h  windows.h
lemon/lemon/concepts/PaxHeaders.31067/: bpgraph.h  digraph.h  graph.h  graph_components.h  heap.h  maps.h
src/: AdjacencyObjectsGenerator.cpp  Controller.cpp  GraphMapper.cpp  GraphProcessor.cpp  NodeEndPoint.cpp  NodeMiddleware.cpp  NodeObserver.cpp  PathMapper.cpp  WSServer.cpp
src/controllers/: EndPointController.cpp  MiddleWareController.cpp
src/interfaces/: SetModel.cpp
src/node_controllers/: EndPointController.cpp  MiddleWareController.cpp
uwebsockets/: CMakeLists.txt
uwebsockets/src/: Epoll.cpp  Extensions.cpp  HTTPSocket.cpp  Hub.cpp  Node.cpp  WebSocket.cpp
